# apt-offline

./: .coveragerc  .gitignore  .hgtags  .mailmap  .project  .testr.conf  .travis.yml  AptOfflineCoreLib.py  AptOfflineDebianBtsLib.py  AptOfflineFetchBugs.py  AptOfflineGUI.py  AptOfflineGUI.ui  AptOfflineLib.py  AptOfflineMagicLib.py  AptOffline_argparse.py  AptOffline_urlutils.py  CHANGELOG  INSTALL  KNOWN-BUGS  LICENSE  Makefile  README  README.md  THANKS  TODO  apc.sig  apt-offline  apt-offline-gui  apt-offline-gui-pkexec  apt-offline-gui.desktop  apt-offline-qt-fetch.ui  apt-offline-qt-install.ui  apt-offline-qt-main.ui  apt-offline-qt.py  apt-offline-testcase.bat  apt-offline-tests.sh  apt-offline.1  apt-offline.8  apt-offline.html  apt_offline_core_lib.py  (+28 more)
apt_offline_core/: AptOfflineCoreLib.py  AptOfflineCoreLib.py~  AptOfflineDebianBtsLib.py  AptOfflineFetchBugs.py  AptOfflineLib.py  AptOfflineMagicLib.py  AptOffline_argparse.py
apt_offline_gui/: AptOfflineQtAbout.py  AptOfflineQtAbout.ui  AptOfflineQtCommon.py  AptOfflineQtCreateProfile.py  AptOfflineQtCreateProfile.py~  AptOfflineQtCreateProfile.ui  AptOfflineQtFetch.py  AptOfflineQtFetch.ui  AptOfflineQtFetchOptions.py  AptOfflineQtFetchOptions.ui  AptOfflineQtInstall.py  AptOfflineQtInstall.ui  AptOfflineQtInstallBugList.py  AptOfflineQtInstallBugList.ui  AptOfflineQtInstallChangelog.py  AptOfflineQtInstallChangelog.ui  AptOfflineQtMain.py  AptOfflineQtMain.ui  AptOfflineQtSaveZip.py  AptOfflineQtSaveZip.ui  QtProgressBar.py  UiDataStructs.py  Ui_AptOfflineQtAbout.py  Ui_AptOfflineQtCreateProfile.py  genui.sh  (+10 more)
(+129 files in other folders)
