[metadata]
name = apt-offline
summary = Offline APT Package Manager
description-file =
  README.md
author = Ritesh Raj Sarraf
author-email = rrs@researchut.com
home-page = http://apt-offline.alioth.debian.org
license = GPL-3
classifier =
  Development Status :: 3 - Testing/Beta
  Environment :: Console
  Intended Audience :: End Users
  License :: OSI Approved :: GPL
  Operating System :: OS Independent
  Programming Language :: Python
  Topc :: Package Management

[files]
packages =
  aptoffline

[entry_points]
console_scripts =
  apt-offline = aptoffline.cmdline:main

[flake8]
exclude = aptoffline/packages
max-complexity = 10

[wheel]
universal = 1